keep capitals only in beginning; removed the in collaboration
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10976 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/authorlist_npb.tex
+++ b/2014/90m paper/authorlist_npb.tex
@@ -91,7 +91,7 @@
 %----------------------------------------------------------------------------------------------------
 % include the actual data
 
-\author{The TOTEM Collaboration}
+\author{TOTEM Collaboration}
 \address{\vspace*{-3mm}}
 \input authorlist_data
 
