--- a/2014/90m paper/conclusion.tex
+++ b/2014/90m paper/conclusion.tex
@@ -1,6 +1,6 @@
 %--------------------------------------------------
 
-\section{Conclusions and Outlook}
+\section{Conclusions and outlook}
 \label{sec:conclusions}
 %
 Thanks to a very-high statistics data set TOTEM has excluded a purely exponential differential 
