--- a/2014/90m paper/elastic_90m_cern.tex
+++ b/2014/90m paper/elastic_90m_cern.tex
@@ -42,11 +42,11 @@
 \vskip-21mm
 \hbox{}
 
-\title{Evidence for Non-Exponential Elastic Proton-Proton Differential Cross-Section at Low $|\hbox{t}|$ and $\sqrt{\hbox{s}}$ = 8 TeV by TOTEM}
-\ShortTitle{\small Evidence for Non-Exponential Elastic pp Differential Cross-Section at Low $|\hbox{t}|$ and $\sqrt{\hbox{s}}$ = 8 TeV}
+\title{Evidence for non-exponential elastic proton-proton differential cross-section at low $|\hbox{t}|$ and $\sqrt{\hbox{s}}$ = 8 TeV by TOTEM}
+\ShortTitle{\small Evidence for non-exponential elastic pp differential cross-section at low $|\hbox{t}|$ and $\sqrt{\hbox{s}}$ = 8 tev}
 
-\Collaboration{The TOTEM Collaboration}
-\ShortAuthor{\small The TOTEM Collaboration (G.~Antchev \emph{\etal})}
+\Collaboration{TOTEM Collaboration}
+\ShortAuthor{\small TOTEM Collaboration (G.~Antchev \emph{\etal})}
 
 
 \input authorlist_cern
