--- a/2014/90m paper/experimental_apparatus.tex
+++ b/2014/90m paper/experimental_apparatus.tex
@@ -1,4 +1,4 @@
-\section{Experimental Apparatus}
+\section{Experimental apparatus}
 \label{sec:apparatus}
 
 The TOTEM experiment is located at the LHC interaction point (IP) 5 together 
