--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -39,7 +39,7 @@
 
 \begin{frontmatter}
 
-\title{Evidence for Non-Exponential Elastic Proton-Proton Differential Cross-Section at Low $|\hbox{t}|$ and $\sqrt{\hbox{s}}$ = 8 TeV by TOTEM}
+\title{Evidence for non-exponential elastic proton-proton differential cross-section at low $|\hbox{t}|$ and $\sqrt{\hbox{s}}$ = 8 TeV by TOTEM}
 
 \input authorlist_npb
 \date{\today}
