updated results to fits without normalisation in chi^2
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10998 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -262,7 +262,7 @@ Table~\ref{tab:fit exp1} shows that both fits with constant phase are essentiall
 Although the quality of the fits with peripheral phases is good, these options seem to be disfavoured from different perspectives.
 \begin{itemize}
 \item Most models predict non-exponential nuclear modulus, see e.g.~\cite{elegent}. Several theoretical reasons are summarised in \cite{kmr15-slope}.
-\item The obtained value of $\rho$ is significantly lower than most extrapolations from lower energies \TODO{cite some of them}.
+\item The obtained value of $\rho$ constitutes an outlier with respect to a consistent pattern of other fits from this report and extrapolations from lower energies \TODO{cite some of them}.
 \item All the non-exponentiality is taken by CNI -- any special/extreme construction by Vojtech?? \TODO{formulate better.}
 \end{itemize}
 
