with finally blessed results
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11263 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -259,6 +259,8 @@ BOTTOM RIGHT: the effects induced by the Coulomb interaction for each of the fit
 
 Table~\ref{tab:fit exp1} shows that both fits with constant phase are essentially identical and have bad fit quality. The step-2 fit using both $\beta^*=1000$ and $90\un{m}$ data can be excluded with $7.6\un{\sigma}$ significance. In turn, since the combination of $N_b=1$ and constant phase is the only compatible with the SWY formula, its use is excluded, too.
 
+\newpage
+
 Although the quality of the fits with peripheral phases is good, these options seem to be disfavoured from different perspectives.
 \begin{itemize}
 \item Most models predict non-exponential nuclear modulus, see e.g.~\cite{elegent}. Several theoretical reasons are summarised in \cite{kmr15-slope}.
