--- a/2013/1km paper/fig/fit_exp1/table_data.tex
+++ b/2013/1km paper/fig/fit_exp1/table_data.tex
@@ -1,16 +1,16 @@
 \begin{tabular}{lcccc}\hline\hline
-										& SWY, constant 		& KL, constant 			& KL, mid-peripheral 	& KL, full-peripheral	\cr\hline\hline
-$\hbox{step 1:}\, \chi^2/\hbox{ndf}$	& $ 48.0 / 27 = 1.78$	& $ 48.1 / 27 = 1.78$	& $ 27.6 / 25 = 1.10$	& $ 27.7 / 27 = 1.03$	\cr
-$\hbox{step 2:}\, \chi^2/\hbox{ndf}$	& $ 180.8 / 58 = 3.12$	& $ 181.2 / 58 = 3.12$	& $ 57.6 / 56 = 1.03$	& $ 64.3 / 58 = 1.11$	\cr
+										& SWY, constant 		& KL, constant 			& KL, peripheral		\cr\hline\hline
+$\hbox{step 1:}\, \chi^2/\hbox{ndf}$	& $ 48.0 / 27 = 1.78$	& $ 48.1 / 27 = 1.78$	& $ 27.7 / 27 = 1.03$	\cr
+$\hbox{step 2:}\, \chi^2/\hbox{ndf}$	& $ 180.8 / 58 = 3.12$	& $ 181.2 / 58 = 3.12$	& $ 64.3 / 58 = 1.11$	\cr
 \hline
-$a\ung{mb/GeV^2}$				 		& $533 \pm 23$			& $533 \pm 23$			& $548 \pm 24$			& $551 \pm 23$			\cr
-$b_1\ung{GeV^{-2}}$				 		& $19.42 \pm  0.05$ 	& $19.42 \pm  0.05$		& $19.69 \pm  0.06$		& $19.74 \pm  0.05$		\cr
+$a\ung{mb/GeV^2}$				 		& $533 \pm 23$			& $533 \pm 23$			& $551 \pm 23$			\cr
+$b_1\ung{GeV^{-2}}$				 		& $19.42 \pm  0.05$ 	& $19.42 \pm  0.05$		& $19.74 \pm  0.05$		\cr
 \hline
-$\rho$							 		& $0.05 \pm  0.02$  	& $0.05 \pm  0.02$		& $0.10 \pm  0.02$		& $0.10 \pm  0.02$		\cr
-$\zeta_1$						 		&					 	&					 	& $800$				   	& $800$					\cr
-$\kappa$						 		&					 	&					 	& $2.41 \pm  0.07$		& $2.311$				\cr
-$\nu\ung{GeV^{-2}}$				 		&					 	&					 	& $8.5 \pm  0.7$		& $8.161$				\cr
+$\rho$							 		& $0.05 \pm  0.02$  	& $0.05 \pm  0.02$		& $0.10 \pm  0.02$		\cr
+$\zeta_1$						 		&					 	&					 	& $800$					\cr
+$\kappa$						 		&					 	&					 	& $2.311$				\cr
+$\nu\ung{GeV^{-2}}$				 		&					 	&					 	& $8.161$				\cr
 \hline
-$\sigma_{\rm tot}\ung{mb}$		 		& $102.0 \pm  2.2$		& $102.0 \pm  2.2$		& $103.1 \pm  2.3$		& $103.4 \pm  2.3$		\cr
+$\sigma_{\rm tot}\ung{mb}$		 		& $102.0 \pm  2.2$		& $102.0 \pm  2.2$		& $103.4 \pm  2.3$		\cr
 \hline\hline
 \end{tabular}
