--- a/2013/1km paper/fig/fit_exp3/table_data.tex
+++ b/2013/1km paper/fig/fit_exp3/table_data.tex
@@ -1,18 +1,18 @@
 \begin{tabular}{lccc}\hline\hline
-										& constant 				& mid-peripheral 		& full-peripheral		\cr\hline\hline
-$\hbox{step 1:}\, \chi^2/\hbox{ndf}$	& $ 25.7/ 25 = 1.03$	& $ 24.8/ 23 = 1.08$	& $ 25.0/ 25 = 1.00$	\cr
-$\hbox{step 2:}\, \chi^2/\hbox{ndf}$	& $ 57.5/ 56 = 1.03$	& $ 59.1/ 54 = 1.09$	& $ 57.6/ 56 = 1.03$	\cr
+										& KL, constant			& KL, peripheral		\cr\hline\hline
+$\hbox{step 1:}\, \chi^2/\hbox{ndf}$	& $ 25.7/ 25 = 1.03$	& $ 25.0/ 25 = 1.00$	\cr
+$\hbox{step 2:}\, \chi^2/\hbox{ndf}$	& $ 57.5/ 56 = 1.03$	& $ 57.6/ 56 = 1.03$	\cr
 \hline
-$a\ung{mb/GeV^2}$						& $549 \pm 24$			& $549 \pm 24$			& $549 \pm 24$			\cr
-$b_1\ung{GeV^{-2}}$						& $20.47 \pm  0.14$		& $20.07 \pm  0.13$		& $19.56 \pm  0.13$		\cr
-$b_2\ung{GeV^{-4}}$						& $8.8 \pm  1.6$		& $5.1 \pm  1.5$		& $-3.3 \pm  1.5$		\cr
-$b_3\ung{GeV^{-6}}$						& $20 \pm  6$			& $14 \pm  5$			& $-13 \pm  5$			\cr
+$a\ung{mb/GeV^2}$						& $549 \pm 24$			& $549 \pm 24$			\cr
+$b_1\ung{GeV^{-2}}$						& $20.47 \pm  0.14$		& $19.56 \pm  0.13$		\cr
+$b_2\ung{GeV^{-4}}$						& $8.8 \pm  1.6$		& $-3.3 \pm  1.5$		\cr
+$b_3\ung{GeV^{-6}}$						& $20 \pm  6$			& $-13 \pm  5$			\cr
 \hline
-$\rho$									& $0.12 \pm  0.03$		& $0.12 \pm  0.03$		& $0.12 \pm 0.03$		\cr
-$\zeta_1$								&					 	& $800$					& $800$			   		\cr
-$\kappa$								&					 	& $2.7 \pm  0.6$		& $2.311$		   		\cr
-$\nu\ung{GeV^{-2}}$						&					 	& $8.5 \pm  0.8$		& $8.161$		   		\cr
+$\rho$									& $0.12 \pm  0.03$		& $0.12 \pm 0.03$		\cr
+$\zeta_1$								&					 	& $800$			   		\cr
+$\kappa$								&					 	& $2.311$		   		\cr
+$\nu\ung{GeV^{-2}}$						&					 	& $8.161$		   		\cr
 \hline
-$\sigma_{\rm tot}\ung{mb}$				& $102.9 \pm  2.3$		& $102.9 \pm  2.3$		& $103.0 \pm  2.3$		\cr
+$\sigma_{\rm tot}\ung{mb}$				& $102.9 \pm  2.3$		& $103.0 \pm  2.3$		\cr
 \hline\hline
 \end{tabular}
