--- a/2013/1km paper/abstract.tex
+++ b/2013/1km paper/abstract.tex
@@ -5,12 +5,18 @@ Near the lower end of the $t$-interval, for
 $|t| \lesssim 2\times10^{-3}\,\rm GeV^{2}$, the differential cross-section is 
 sensitive to the 
 interference between the hadronic and the electromagnetic scattering amplitudes.
-This article presents the measured cross-section and its interpretation for 
-different assumptions on the functional forms of the interference term and of 
-the phase of the hadronic elastic amplitude. In 
-particular, the $\rho$-parameter, i.e. 
-the arctangent of the hadronic phase at $t = 0$,
-%the ratio between the real and the 
-%imaginary parts of the forward hadronic elastic amplitude, 
-was determined for each case. The conditional results for $\rho$ lie in the 
-range $0.059 - 0.12$ with a typical uncertainty of $\sim0.02$.
+This article presents the measured cross-section and the constraints it 
+imposes on the functional forms of the interference term and of modulus and
+phase of the hadronic elastic amplitude. The data exclude the traditionally 
+applied Simplified West and Yennie interference formula requiring a constant 
+phase and a purely exponential modulus of the hadronic amplitude. 
+For non-exponential parameterisations of the hadronic 
+modulus, on the other hand, the data are compatible with hadronic phase 
+functions producing either centrally or peripherally dominated impact 
+parameter distributions in elastic scattering events. In both cases, 
+the $\rho$-parameter, i.e. the arctangent of the hadronic phase at $t = 0$,
+was found to be $0.12 \pm 0.03$. The results for the total hadronic 
+cross-section are $\sigma_{\rm tot} = (102.0 \pm 2.3)$\,mb and 
+$(103.0 \pm 2.3)$\,mb for central and peripheral phase formulations, 
+respectively. Both are consistent with previous TOTEM measurements.
+
