--- a/2013/1km paper/introduction.tex
+++ b/2013/1km paper/introduction.tex
@@ -3,19 +3,19 @@
 
 Elastic scattering of protons is a process mediated by the strong and the electromagnetic interactions -- the weak interaction can be neglected since its carriers are heavy compared to the small momentum transfers, $|t|$, typical for elastic scattering. In this context, the strong interaction is traditionally called nuclear and the electromagnetic called Coulomb. In quantum-theory description, each of the interactions is described by a complex scattering amplitude, nuclear ${\cal A}^{\rm N}$ and Coulomb ${\cal A}^{\rm C}$. Moreover, the superposition 
 of the two amplitudes generates an interference term in the combined interaction cross-section. 
-Since the Coulomb amplitude is known, the Coulomb-nuclear interference (CNI) exposes the phase of the nuclear amplitude, which is necessary for a complete understanding of the interaction but not directly observable in the pure hadronic differential cross-section. The interference effect is most pronounced in the $t$-region where the two amplitudes have similar magnitudes, i.e. -- for typical LHC centre-of-mass energies of a few TeV -- near $t \sim 5 \times 10^{-4}\,\rm GeV^{2}$. Thus the experimental sensitivity to 
+Since the Coulomb amplitude is known, the Coulomb-nuclear interference (CNI) exposes the phase of the nuclear amplitude, which is necessary for a complete understanding of the interaction but not directly observable in the pure hadronic differential cross-section. The interference effect is most pronounced in the $t$-region where the two amplitudes have similar magnitudes, i.e. -- for typical LHC centre-of-mass energies of a few TeV -- near $|t| \sim 5 \times 10^{-4}\,\rm GeV^{2}$. Thus the experimental sensitivity to 
 the nuclear phase, which for general nuclear amplitudes is a function of $t$, 
 is limited to a region at very small $|t|$, making any conclusions on the 
 functional form of the phase very difficult.
 In the analyses of past experiments (see e.g.~\cite{plb43,plb66,npb141,prl47,plb115,plb120,plb128,npb262} 
-(ISR),~\cite{plb198,plb316} (S$\bar{\un p}$pS),~\cite{prl68} (Tevatron)) 
+(ISR),~\cite{plb198,plb316} ($\rm S\bar{p}pS$),~\cite{prl68} (Tevatron)) 
 typically a strongly simplified interference formula was used. This so-called
 Simplified West-Yennie (SWY) formula~\cite{wy68} is based on restrictive assumptions on the 
 hadronic amplitude, implying in particular a purely exponential modulus and a 
 constant phase for all $t$ (see the discussion in 
 Section~\ref{sec:cni interference}).
-As result, traditionally the phase value $\arg {\cal A}^{\rm N} (t=0)$, or
-equivalently, $\rho \equiv \cot \, \arg {\cal A}^{\rm N} (0) = \frac{\Re {\cal A}^{\rm N} (0)}{\Im {\cal A}^{\rm N} (0)}$ was quoted. 
+As result, the phase value $\arg {\cal A}^{\rm N} (t=0)$, or
+equivalently, $\rho \equiv \cot \, \arg {\cal A}^{\rm N} (0) = \frac{\Re {\cal A}^{\rm N} (0)}{\Im {\cal A}^{\rm N} (0)}$ was traditionally quoted. 
 Most of the interest in $\rho$ lies in its predictive power on total cross-sections at higher centre-of-mass energies via dispersion 
 relations~\cite{dremin-dispersion}. 
 
@@ -35,15 +35,16 @@ choice of the theoretically unknown functional forms of the hadronic modulus
 and phase. Since the data cannot unambiguously determine all functional forms and their parameters, the results of this study, still representatively 
 expressed in terms of $\rho$, become conditional to the choice of the model 
 describing the hadronic amplitude. This choice has implications on the behaviour of the interaction in impact parameter space. In particular, the functional 
-form of the hadronic phase at $|t|>0$ determines whether elastic collisions occur predominantly at small or large impact parameters (centrality vs. peripherality). A relevant question to be addressed in the discussion of the fit results is therefore whether the data have enough discrimination power to show any preference for either a central or a peripheral elastic scattering behaviour (Section~\ref{sec:cni task discussion} \TODO{correct?}).
+form of the hadronic phase at $|t|>0$ determines whether elastic collisions occur predominantly at small or large impact parameters (centrality vs. peripherality). A relevant question to be addressed in the discussion of the fit results is therefore whether the data have enough discrimination power to show any preference for either a central or a peripheral elastic scattering behaviour (Section~\ref{sec:fit exp3} \TODO{correct?}).
 
 The paper is organised as follows.
 \begin{itemize}
-\item Section~\ref{sec:exp apparatus} outlines the experimental setup used for the presented measurement.
+\item Section~\ref{sec:exp apparatus} outlines the experimental setup used for the measurement.
 \item Section~\ref{sec:beam optics} describes the properties of the special beam optics.
 \item Section~\ref{sec:data taking} gives details of the data-taking conditions.
 \item Section~\ref{sec:differential cross-section} describes the data analysis and reconstruction of the differential cross-section.
-\item Section~\ref{sec:coulomb}: study of the Coulomb-nuclear interference together with the functional form of the hadronic amplitude.
+\item Section~\ref{sec:coulomb} presents the study of the Coulomb-nuclear interference together with the functional form of the hadronic amplitude. As central
+results, the values of $\rho$ and $\sigma_{\rm tot}$ are determined.
 \end{itemize}
 
 %In order to optimally exploit the information of all available data, the two 
@@ -51,5 +52,5 @@ The paper is organised as follows.
 %The $\beta^{*}=90\,$m set with very high statistics at higher $|t|$ fixes the 
 %hadronic modulus, whereas the $\beta^{*}=1000\,$m set with its reach to very low
 %$|t|$ determines phase parameters.
-
-\TODO{physics goals: $\sigma_{\rm tot}$ and $\rho$, Coulomb analysis = tool}
+%
+%\TODO{physics goals: $\sigma_{\rm tot}$ and $\rho$, Coulomb analysis = tool}
