--- a/2013/1km paper/differential_cross_section.tex
+++ b/2013/1km paper/differential_cross_section.tex
@@ -49,7 +49,7 @@ where $p$ denotes the beam momentum.
 \subsubsection{Alignment}
 \label{sec:alignment}
 
-The standard three-stage procedure \cite{totem-ijmp} has been applied: beam-based alignment prior to the run (as for LHC collimators) followed by two off-line methods. First, track-based alignment for relative positions among RPs, and second, alignment with elastic events for absolute position with respect to the beam (performed in 15 minutes time periods to check for possible beam movements).
+The standard three-stage procedure \cite{totem-ijmp} has been applied: beam-based alignment prior to the run (as for LHC collimators) followed by two off-line methods. First, track-based alignment for relative positions among RPs, and second, alignment with elastic events for absolute position with respect to the beam -- performed in 15 minutes time periods to check for possible beam movements.
 
 This procedure has been further extended to improve the vertical alignment. The new steps exploit the fact that the elastic scattering with its two anti-collinear protons can relate the alignment in the left and right arm (with an uncertainty of $20\un{\mu m}$). Furthermore, the horizontal RPs in the right arm recorded a hit distribution usable for vertical alignment in addition to the standard technique based on the vertical RPs, see Figure~\ref{fig:align meth}.
 
@@ -69,7 +69,7 @@ Exploiting all the methods, the alignment uncertainties have been estimated to $
 \label{eq:alig rot bias}
 	\theta_x^* \rightarrow \theta_x^* + c \theta_y^*\ ,
 \end{equation}
-where the proportionality constant $c$ has a standard deviation of $0.005$.
+where the proportionality constant $c$ has a mean of 0 and a standard deviation of $0.005$.
 
 
 % the observed hit inefficiencies -- possible asymmetries -- discuss ???
@@ -80,7 +80,7 @@ where the proportionality constant $c$ has a standard deviation of $0.005$.
 
 \subsubsection{Optics}
 \label{sec:optics}
-In order to reduce the impact of imperfect optics knowledge, the optics matching technique \cite{totem-optics} has been applied. This method uses various RP observables to determine fine corrections to the optical functions presented in Eq.~(\ref{eq:prot trans}).
+In order to reduce the impact of imperfect optics knowledge, the LHC optics calibration \cite{totem-optics} has been applied. This method uses various RP observables to determine fine corrections to the optical functions presented in Eq.~(\ref{eq:prot trans}).
 
 The residual errors induce a bias in the reconstructed scattering angles:
 \begin{equation}
@@ -106,9 +106,9 @@ normalised such that the factors $\eta_{1,2}$ have unit variance.
 \subsubsection{Resolution}
 \label{sec:resolution}
 
-The statistical fluctuations in $\theta_y^*$ are mostly due to the beam divergence and can be studied by comparing the angles reconstructed from the left and right arm. As illustrated in Figure~\ref{fig:beam div vert}, the distributions show only minimal deviations from a Gaussian shape.
+Statistical fluctuations in $\theta_y^*$ are mostly due to the beam divergence and can be studied by comparing the angles reconstructed from the left and right arm. As illustrated in Figure~\ref{fig:beam div vert}, the distributions show only minimal deviations from a Gaussian shape.
 %
-By dividing their standard deviation by a factor of 2, one can estimate the resolution of the two-arm reconstruction (Eq.~(\ref{eq:kin 2a})) of elastic events, see Figure~\ref{fig:resol final}.
+By dividing their standard deviation by a factor of 2, one can estimate the resolution of the two-arm reconstruction (Eq.~(\ref{eq:kin 2a})) of elastic events, see Figure~\ref{fig:resol final}, right.
 %
 Moreover, measurements of beam emittances \cite{op-elog} indicate that the vertical divergences of the two beams can be considered as equal with a tolerance of about $25\un{\%}$. Exploiting this fact, one can de-convolute the distribution of $\theta_y^{*\rm R} - \theta_y^{*\rm L}$ in order to obtain the beam-divergence distribution, used e.g.~for acceptance corrections discussed in Section~\ref{sec:acc corr}.
 
@@ -127,7 +127,7 @@ In the horizontal projection, a more complex procedure is used since the one-arm
 \label{eq:beam div from vertex}
 \sigma^{\rm bd}(\theta_x^*) = {\sigma(x^*) \sqrt 2\over \beta^*}\ ,
 \end{equation}
-showing an increase from $0.75$ to $0.9\un{\mu rad}$ during the fill. Subtracting this component from the standard deviation of $\theta_x^{*\rm R} - \theta_x^{*\rm L}$, one can determine the (mean) spatial resolution of the sensors in each diagonal: $10.7\un{\mu m}$ (45 top -- 56 bottom) and $12.1\un{\mu m}$ (45 bottom -- 56 top). These results have been verified to be time independent. Finally, the beam divergence and sensor resolution components can be propagated through Eq.~({\ref{eq:kin 2a}}) to estimate the $\theta_x^*$ resolution for elastic events, as plotted in Figure~\ref{fig:resol final}.
+showing an increase from $0.75$ to $0.9\un{\mu rad}$ during the fill. Subtracting this component from the standard deviation of $\theta_x^{*\rm R} - \theta_x^{*\rm L}$, one can determine the (mean) spatial resolution of the sensors in each diagonal: $10.7\un{\mu m}$ (45 top -- 56 bottom) and $12.1\un{\mu m}$ (45 bottom -- 56 top). These results have been verified to be time independent. Finally, the beam divergence and sensor resolution components can be propagated through Eq.~({\ref{eq:kin 2a}}) to estimate the $\theta_x^*$ resolution for elastic events, as plotted in Figure~\ref{fig:resol final}, left.
 
 
 \begin{figure}
@@ -147,8 +147,9 @@ Angular resolution for the two-arm reconstruction, Eq.~(\ref{eq:kin 2a}), as a f
 For a given $t$ bin, the differential cross-section is evaluated by selecting and counting elastic events:
 \begin{equation}
 {\d\sigma\over \d t}(\hbox{bin}) =
-	{\cal N}\, {\cal U}({\rm bin})\, {\cal B}\ 
-	{\sum\limits_{t \in \hbox{bin}} {\cal A}(\theta^*, \theta_y^*)\ {\cal E}(\theta_y^*)\over \Delta t}\ ,
+	{\cal N}\, {\cal U}({\rm bin})\, {\cal B}\, {1\over \Delta t}
+	\sum\limits_{t\, \in\, {\rm bin}} {\cal A}(\theta^*, \theta_y^*)\ {\cal E}(\theta_y^*)
+	\ ,
 \end{equation}
 where $\Delta t$ is the width of the bin, ${\cal N}$ is a normalisation factor and the other symbols stand for various correction factors:
  ${\cal U}$ for unfolding of resolution effects, ${\cal B}$ for background subtraction, ${\cal A}$ for acceptance correction and ${\cal E}$ for detection and reconstruction efficiency.
@@ -243,7 +244,7 @@ The calculation of the geometrical correction ${\cal A}_{\rm geom}$ is based on 
 } \ .
 \end{equation}
 
-The correction ${\cal A}_{\rm fluct}$ is calculated analytically from the probability that any of the two elastic protons is pushed outside the acceptance due to the vertical beam divergence. The beam divergence distribution is modelled as a Gaussian with the spread determined by the method described in Section~\ref{sec:resolution}. This correction contribution is only sizeable close to the acceptance limitations but is kept below $2.5$ by discarding data with larger corrections. The uncertainties are related to the resolution parameters. For the lowest $|t|$ bin their relative values are: vertical beam divergence: $2\un{\%}$, left-right asymmetry: $1\un{\%}$ and non-Gaussian shape: $1\un{\%}$.
+The correction ${\cal A}_{\rm fluct}$ is calculated analytically from the probability that any of the two elastic protons leaves the region of acceptance due to the vertical beam divergence. The beam divergence distribution is modelled as a Gaussian with the spread determined by the method described in Section~\ref{sec:resolution}. This correction contribution is only sizeable close to the acceptance limitations but is kept below $2.5$ by discarding data with larger corrections. The uncertainties are related to the resolution parameters. For the lowest $|t|$ bin their relative values are: vertical beam divergence: $2\un{\%}$, left-right asymmetry: $1\un{\%}$ and non-Gaussian shape: $1\un{\%}$.
 
 Figure \ref{fig:acc corr res} shows an example of the $t$-dependence of the acceptance correction for the close diagonal. Since a single diagonal cannot cover more than half of the phase space, the minimum value of the correction is $2$. The very low $|t|$ data points with the full correction larger than $10$ are discarded.
 
@@ -302,7 +303,7 @@ The first term in the parentheses sums the contributions from the four RPs of a 
 \subsubsection{Unfolding of Resolution Effects}
 \label{sec:unfolding}
 
-Thanks to the very small beam divergence, the correction for resolution effects can be safely determined by the following iterative procedure. The differential cross-section data are fitted by a smooth curve which serves as an input to a numerical-integration based calculation of smeared $t$-distribution (using the resolution parameters determined in Section~\ref{sec:resolution}). Making a ratio of the smeared / non-smeared $t$-distributions gives a set of per-bin correction factors. Applying them to the yet uncorrected differential cross-section yields a better estimate of the true $t$-distribution, which can be used as input to the next iteration. The final correction is negligible (${\cal U} \approx 1$) for all bins except at very low $|t|$ where the rapid cross-section growth occurs, see Figure~\ref{fig:unfolding}.
+Thanks to the very small beam divergence, the correction for resolution effects can be safely determined by the following iterative procedure. The differential cross-section data are fitted by a smooth curve which serves as an input to a numerical-integration based calculation of smeared $t$-distribution (using the resolution parameters determined in Section~\ref{sec:resolution}). Making a ratio of the smeared / non-smeared $t$-distributions gives a set of per-bin correction factors. Applying them to the yet uncorrected differential cross-section yields a better estimate of the true $t$-distribution, which can be used as input to the next iteration. The iterations stop when the difference between the input and output $t$-distributions becomes negligible, which is typically achieved after the second iteration. The final correction is negligible (${\cal U} \approx 1$) for all bins except at very low $|t|$ where the rapid cross-section growth occurs, see Figure~\ref{fig:unfolding}.
 
 For the uncertainty estimate, the uncertainties of $\theta_x^*$ and $\theta_y^*$ resolutions (accommodating the full time variation) as well as fit-model dependence have been considered, each contribution giving a few per-mille for the lowest-$|t|$ bin.
 
@@ -376,7 +377,7 @@ The final cross-section is tabulated in Table~\ref{tab:data} and visualised in F
 \includegraphics{fig/t_dist_tabulation.pdf}
 \vskip-3mm
 \caption{%
-Differential cross-section from Table \ref{tab:data} with statistical (bars) and systematic uncertainties (bands). The yellow band represents all systematic uncertainties, the brown one all but normalisation. \TODO{bands: how centred}? LEFT: a low-$|t|$ zoom of the differential cross-section. RIGHT: differential cross-section over the full $|t|$ range plotted relative to a reference exponential.
+Differential cross-section from Table \ref{tab:data} with statistical (bars) and systematic uncertainties (bands). The yellow band represents all systematic uncertainties, the brown one all but normalisation. The bands are centred around a data fit including both nuclear and Coulomb components (Eqs.~(\ref{eq:int kl}), (\ref{eq:nuc phase con}) and (\ref{eq:nuc mod}) with $N_b=3$). LEFT: a low-$|t|$ zoom of the differential cross-section. RIGHT: differential cross-section over the full $|t|$ range plotted relative to a reference exponential.
 }
 \label{fig:dsdt}
 \end{center}
